# Options-testing-facility

./: .gitignore  Base  README.md  pyproject.toml
.github/workflows/: ci.yml  slow.yml
docs/: DECISIONS.md  MODEL_HISTORY.md  SSFV_IMPLEMENTATION_ARCHITECTURE.md
legacy/: base_pricing.py
otf/: __init__.py  optim.py
otf/calibration/: __init__.py  bridge_fit.py  heston_fit.py  surface_fit.py
otf/data/: __init__.py  chains.py  realized.py
otf/evaluation/: __init__.py  pricing.py  stats.py
otf/experiments/: calibrate_surface.py  ssfv_synthetic.py  surface_oos.py
otf/models/: __init__.py  black_scholes.py  heston.py  sfv.py  svi.py
otf/ssfv/: __init__.py  config.py  interfaces.py  types.py
otf/ssfv/bsde/: __init__.py  picard.py  regression.py
otf/ssfv/certificates/: __init__.py  bundle.py
otf/ssfv/constraints/: __init__.py  hat_family.py
otf/ssfv/dual/: __init__.py  calibrator.py  projective_sequence.py
otf/ssfv/posterior/: __init__.py  reweight.py
otf/ssfv/prior/: __init__.py  heston.py
otf/ssfv/projection/: __init__.py  diffusion.py
scripts/: backfill_chains.py  collect_chains.py  panels_to_chains.py
tests/: test_black_scholes.py  test_bridge_legacy_golden.py  test_calibration.py  test_chains.py  test_heston.py  test_pricing_eval.py  test_realized.py  test_sfv_engine.py  test_ssfv_bsde_dual.py  test_ssfv_constraints.py  test_ssfv_external_dgp.py  test_ssfv_prior.py  test_ssfv_projective.py  test_stats.py  test_surface_fit.py  test_svi.py
