[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "options-testing-facility"
version = "0.1.0"
description = "Research facility for calibrating and stress-testing the SFV (Schrödinger-bridge-corrected stochastic volatility) model against standard option-pricing benchmarks on real LSEG Workspace data."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
lseg = ["lseg-data", "pandas"]

[tool.setuptools.packages.find]
include = ["otf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
