[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "options-testing-facility"
version = "0.1.0"
description = "Research facility for calibrating and stress-testing the SFV (Schrödinger-bridge-corrected stochastic volatility) model against standard option-pricing benchmarks on real LSEG Workspace data."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# Legacy facility is pure-stdlib: `dependencies = []` stays empty and
# `import otf` / `import otf.ssfv` must never require NumPy or PyTorch.
# The SSFV numerical core lives behind these extras (docs/DECISIONS.md D2).
numerical = ["numpy", "scipy"]
torch = ["torch"]
data = ["pandas", "pyarrow", "duckdb"]
dev = ["pytest", "hypothesis", "ruff", "mypy"]
lseg = ["lseg-data", "pandas"]

[tool.setuptools.packages.find]
include = ["otf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
